almost finish about page

--- a/index.html
+++ b/index.html
@@ -104,11 +104,12 @@
     <!-- Team Section -->
     <section id="team" class="bg-light-gray">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-xs-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
+            <div>
+                <div class="our-amazing-team">
+                    <h2 class="our-amazing-team">Our Amazing Team</h2>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
@@ -116,14 +117,13 @@
                         <h4>Martin Atanasov</h4>
                         <p class="text-muted">Lead Designer</p>
                         <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a>
+                            <li class="list-inline-item"><a target="_blank" href="https://www.facebook.com/profile.php?id=100001991788015"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li class="list-inline-item"><a target="_blank" href="https://mail.google.com/mail/u/0/#inbox?compose=158c46c8b27658a4"><i class="fa fa-envelope-o"></i></a>
                             </li>
                         </ul>
                     </div>
+                    <div class="team-letter">M</div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
@@ -131,14 +131,12 @@
                         <h4>Antonio Buyukliev</h4>
                         <p class="text-muted">Lead Marketer</p>
                         <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li class="list-inline-item"><a target="_blank" href="https://www.facebook.com/antoniobuyukliev"><i class="fa fa-facebook"></i></a></li>
+                            <li class="list-inline-item"><a target="_blank" href="https://mail.google.com/mail/u/0/#inbox?compose=158c46d434f7e990"><i class="fa fa-envelope-o"></i></a>
                             </li>
                         </ul>
                     </div>
+                    <div class="team-letter-lapeto">A</div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
@@ -146,31 +144,33 @@
                         <h4>Ivan Stoyanov</h4>
                         <p class="text-muted">Lead Developer</p>
                         <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a>
+                            <li class="list-inline-item"><a target="_blank" href="https://www.facebook.com/ivan.stoyanov.560"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li class="list-inline-item"><a target=<a href="https://mail.google.com/mail/u/0/#inbox?compose=158c473af3441dd1"><i class="fa fa-envelope-o"></i></a>
                             </li>
                         </ul>
                     </div>
+                    <div class="team-letter-vanto">I</div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member-pinio">
-                        <img src="img/team/pinio.jpg" class="img-fluid rounded-circle" alt="">
+                    <div class="team-member-pinio team-member">
+                        <img src="img/team/pinio3.jpg" class="img-fluid rounded-circle" alt="">
                         <h4>Konstantin Filosofov</h4>
                         <p class="text-muted">Lead Developer</p>
                         <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a>
+                            <li class="list-inline-item"><a target="_blank" href="https://www.facebook.com/konstantin.filosofov"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li class="list-inline-item"><a target="_blank" href="imeila na pinio"><i class="fa fa-envelope-o"></i></a>
                             </li>
                         </ul>
                     </div>
+                    <div class="team-letter-pinio">K</div>
                 </div>
-
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-xs-center">
+                    <h2 class="section-heading">Created a website for teenagers, where they can share problems, hobbies, interests and не мога да го изммисля</h2>
+                </div>
             </div>
         </div>
     </section>
