--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Theme CSS -->
     <link href="css/agency.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/officialCSS.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 </head>
 
@@ -276,14 +277,7 @@
     <section id="about">
         <div class="login-page1" >
             <div class="form1">
-                <form class="register-form">
-                    <input type="text" placeholder="name"/>
-                    <input type="password" placeholder="password"/>
-                    <input type="text" placeholder="email address"/>
-                    <button>create</button>
-                    <p class="message">Already registered? <a href="#">Sign In</a></p>
-                </form>
-                <form class="login-form1">
+                <form class="login-form-1">
                     <input type="text" placeholder="username"/>
                     <input type="password" placeholder="password"/>
                     <button>login</button>
@@ -296,10 +290,7 @@
             <div class="row">
                 <div class="col-lg-12">
 
-                            <!--<div class="timeline-image">-->
-                                <!--<img src="img/login-background.jpg" height="624"-->
-                                                                  <!--width="500"/>-->
-                            <!--</div>-->
+
                 </div>
             </div>
         </div>
@@ -338,6 +329,74 @@
 
     </section>
 
+
+    <section id="profile">
+        <div class="container profile">
+            <div class="row">
+                <div class="span12">
+                    <div class="well well-small clearfix">
+                        <div class="row-fluid">
+                            <div class="span2">
+                                <img src="img/profile%20picture.png" width="125px" height="125px" class="img-polaroid"/>
+                            </div>
+                            <div class="span4">
+                                <h2>Jonnie Spratley <a href="#">
+                                    <span class="glyphicon glyphicon-pencil"></span></a>
+                                    <div style="display: none">
+                                        <input type="text" name="editfullname"   placeholder="Full Name" />
+                                        <button name="edit" >Edit</button>
+                                    </div>
+                                </h2>
+                                <ul class="unstyled">
+                                    <li><i class="icon-phone"></i> 916-241-3613 <a href="#">
+                                        <span class="glyphicon glyphicon-pencil"></span></a>
+                                        <div style="display: none">
+                                            <input type="text" name="edittelephone" placeholder="Phone Number" />
+                                            <button name="edit">Edit</button>
+                                        </div>
+                                    </li>
+                                    <li><i class="icon-envelope"></i> jonniespratley@me.com <a href="#">
+                                        <span class="glyphicon glyphicon-pencil"></span></a>
+                                        <div style="display: none">
+                                            <input type="text" name="editemail" placeholder="E-mail" />
+                                            <button name="edit">Edit</button>
+                                        </div>
+                                    </li>
+                                    <li><i class="icon-globe"></i> http://jonniespratley.me
+                                        <a href="#">
+                                        <span class="glyphicon glyphicon-pencil"></span>
+                                        </a>
+                                        <div style="display: none">
+                                                <input type="text" name="editfacebook" placeholder="Facebook" />
+                                                <button name="edit">Edit</button>
+                                            </div>
+                                    </li>
+
+                                </ul>
+                            </div>
+                                <ul class="inline stats">
+                                    <li>
+                                        <span id="questions">0</span>
+                                        <h5>Questions</h5>
+                                    </li>
+                                    <li>
+                                        <span id="comments">0</span>
+                                        <h5>Comments</h5>
+                                    </li>
+
+                                </ul>
+                                <div><!--/span6-->
+                                </div><!--/row-->
+                            </div>
+                            <!--Body content-->
+                        </div>
+                    </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="container">
             <div class="row">
