--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
     <!-- Theme CSS -->
     <link href="css/agency.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/officialCSS.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
     <script src="js/jquery-3.1.1.min.js"></script>
 
 </head>
@@ -32,12 +30,12 @@
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-fixed-top">
         <div class="container">
-            <a class="navbar-brand page-scroll" href="#page-top">Teen Center</a>
+            <a class="navbar-brand page-scroll" id="title-name" href="#page-top">Teen Center</a>
             <button class="btn btn-primary btn-toggle hidden-md-up float-xs-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fa fa-bars"></i></button>
             <!-- Clearfix with a utility class added to allow for better navbar responsiveness. -->
             <div class="clearfix hidden-md-up"></div>
             <div class="collapse navbar-toggleable-sm" id="navbarResponsive">
-                <ul class="nav navbar-nav float-md-right">
+                <ul id="all-bars" class="nav navbar-nav float-md-right">
                     <li class="nav-item">
                         <a class="nav-link page-scroll" id="themes-bar" href="#services">Themes</a>
                     </li>
@@ -301,7 +299,10 @@
             <div class="row">
                 <div class="col-lg-12">
 
-
+                            <!--<div class="timeline-image">-->
+                                <!--<img src="img/login-background.jpg" height="624"-->
+                                                                  <!--width="500"/>-->
+                            <!--</div>-->
                 </div>
             </div>
         </div>
@@ -340,74 +341,6 @@
 
     </section>
 
-
-    <section id="profile">
-        <div class="container profile">
-            <div class="row">
-                <div class="span12">
-                    <div class="well well-small clearfix">
-                        <div class="row-fluid">
-                            <div class="span2">
-                                <img src="img/profile%20picture.png" width="125px" height="125px" class="img-polaroid"/>
-                            </div>
-                            <div class="span4">
-                                <h2>Jonnie Spratley <a href="#">
-                                    <span class="glyphicon glyphicon-pencil"></span></a>
-                                    <div style="display: none">
-                                        <input type="text" name="editfullname"   placeholder="Full Name" />
-                                        <button name="edit" >Edit</button>
-                                    </div>
-                                </h2>
-                                <ul class="unstyled">
-                                    <li><i class="icon-phone"></i> 916-241-3613 <a href="#">
-                                        <span class="glyphicon glyphicon-pencil"></span></a>
-                                        <div style="display: none">
-                                            <input type="text" name="edittelephone" placeholder="Phone Number" />
-                                            <button name="edit">Edit</button>
-                                        </div>
-                                    </li>
-                                    <li><i class="icon-envelope"></i> jonniespratley@me.com <a href="#">
-                                        <span class="glyphicon glyphicon-pencil"></span></a>
-                                        <div style="display: none">
-                                            <input type="text" name="editemail" placeholder="E-mail" />
-                                            <button name="edit">Edit</button>
-                                        </div>
-                                    </li>
-                                    <li><i class="icon-globe"></i> http://jonniespratley.me
-                                        <a href="#">
-                                        <span class="glyphicon glyphicon-pencil"></span>
-                                        </a>
-                                        <div style="display: none">
-                                                <input type="text" name="editfacebook" placeholder="Facebook" />
-                                                <button name="edit">Edit</button>
-                                            </div>
-                                    </li>
-
-                                </ul>
-                            </div>
-                                <ul class="inline stats">
-                                    <li>
-                                        <span id="questions">0</span>
-                                        <h5>Questions</h5>
-                                    </li>
-                                    <li>
-                                        <span id="comments">0</span>
-                                        <h5>Comments</h5>
-                                    </li>
-
-                                </ul>
-                                <div><!--/span6-->
-                                </div><!--/row-->
-                            </div>
-                            <!--Body content-->
-                        </div>
-                    </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <footer>
         <div class="container">
             <div class="row">
