--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <!-- Theme CSS -->
     <link href="css/agency.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/officialCSS.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <script src="js/jquery-3.1.1.min.js"></script>
 
@@ -351,34 +350,35 @@
                                 <img src="img/profile%20picture.png" width="125px" height="125px" class="img-polaroid"/>
                             </div>
                             <div class="span4">
-                                <h2>Jonnie Spratley <a href="#">
-                                    <span class="glyphicon glyphicon-pencil"></span></a>
-                                    <div style="display: none">
-                                        <input type="text" name="editfullname"   placeholder="Full Name" />
-                                        <button name="edit" >Edit</button>
-                                    </div>
-                                </h2>
-                                <ul class="unstyled">
-                                    <li><i class="icon-phone"></i> 916-241-3613 <a href="#">
+                                <div>
+                                    <h2>Jonnie Spratley</h2> <a href="#profile">
                                         <span class="glyphicon glyphicon-pencil"></span></a>
                                         <div style="display: none">
-                                            <input type="text" name="edittelephone" placeholder="Phone Number" />
+                                            <input type="text" name="editso1"   placeholder="Full Name" />
+                                            <button name="edit" >Edit</button>
+                                        </div>
+                                </div>
+                                <ul class="unstyled">
+                                    <li><i class="icon-phone"></i> 916-241-3613 <a href="#profile">
+                                        <span class="glyphicon glyphicon-pencil"></span></a>
+                                        <div style="display: none">
+                                            <input type="text" name="editso2" placeholder="Phone Number" />
                                             <button name="edit">Edit</button>
                                         </div>
                                     </li>
-                                    <li><i class="icon-envelope"></i> jonniespratley@me.com <a href="#">
+                                    <li><i class="icon-envelope"></i> jonniespratley@me.com <a href="#profile">
                                         <span class="glyphicon glyphicon-pencil"></span></a>
                                         <div style="display: none">
-                                            <input type="text" name="editemail" placeholder="E-mail" />
+                                            <input type="text" name="editso3" placeholder="E-mail" />
                                             <button name="edit">Edit</button>
                                         </div>
                                     </li>
                                     <li><i class="icon-globe"></i> http://jonniespratley.me
-                                        <a href="#">
+                                        <a href="#profile">
                                         <span class="glyphicon glyphicon-pencil"></span>
                                         </a>
                                         <div style="display: none">
-                                                <input type="text" name="editfacebook" placeholder="Facebook" />
+                                                <input type="text" name="editso4" placeholder="Facebook" />
                                                 <button name="edit">Edit</button>
                                             </div>
                                     </li>
