--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link href="css/agency.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/officialCSS.css">
     <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/jquery-3.1.1.js"></script>
+
 
 </head>
 
@@ -341,6 +343,27 @@
 
     </section>
 
+    <section id="forum" style="display: none">
+        <input type="submit" id="zdr">
+        <div class="main-for-themes">
+            <div id="themes">
+                <div id="themeHeader"><strong>Themes</strong></div>
+                <hr class="themeHR">
+                <!--<div class="theme">tva sa temite</div>
+                <div class="theme">i kvo ot tova</div>
+                <div class="theme"> nz</div>
+                <div class="theme">mi ok duhai</div>
+                <div class="theme">davai go</div>
+                <div class="theme">na ti go</div> -->
+            </div>
+            <div id="questions">
+                <div id="questionsHeader"><strong>Latest questions</strong></div>
+                <hr class="themeHR">
+
+            </div>
+        </div>
+    </section>
+
     <footer>
         <div class="container">
             <div class="row">
@@ -553,7 +576,7 @@
 
     <!-- jQuery -->
     <script src="js/registration.js"></script>
-
+    <script src="js/themes.js"></script>
     <!-- Tether -->
     <script src="vendor/tether/tether.min.js"></script>
 
