edit bars and some CSS details

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" id="register-bar" href="#contact">Register</a>
                     </li>
-                    <li class="nav-item">
+                    <div class="nav-item">
                         <a class="nav-link page-scroll" id="logout-bar" href="#page-top">Logout</a>
-                    </li>
+                    </div>
                 </ul>
             </div>
         </div>
