--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>Teen Center</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -344,23 +344,14 @@
 
     </section>
 
-    <section id="forum" style="display: none">
+    <section id="forum">
         <input type="submit" id="zdr">
         <div class="main-for-themes">
             <div id="themes">
                 <div id="themeHeader"><strong>Themes</strong></div>
-                <hr class="themeHR">
-                <!--<div class="theme">tva sa temite</div>
-                <div class="theme">i kvo ot tova</div>
-                <div class="theme"> nz</div>
-                <div class="theme">mi ok duhai</div>
-                <div class="theme">davai go</div>
-                <div class="theme">na ti go</div> -->
             </div>
             <div id="forumQuestions">
                 <div id="questionsHeader"><strong>Latest questions</strong></div>
-                <hr class="themeHR">
-
             </div>
         </div>
     </section>
