--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="collapse navbar-toggleable-sm" id="navbarResponsive">
                 <ul id="all-bars" class="nav navbar-nav float-md-right">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" id="themes-bar" href="#services">Themes</a>
+                        <a class="nav-link page-scroll" id="themes-bar" href="#forum">Themes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" id="about-bar" href="#team">About</a>
@@ -53,6 +53,9 @@
                     </li>
                     <div class="nav-item">
                         <a class="nav-link page-scroll" id="logout-bar" href="#page-top">Logout</a>
+                    </div>
+                    <div class="nav-item">
+                        <a class="nav-link page-scroll" id="profile-bar" href="#profile">Profile</a>
                     </div>
                 </ul>
             </div>
@@ -74,39 +77,7 @@
         </div>
     </header>
 
-    <!-- Services Section -->
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-xs-center">
-                    <h2 class="section-heading">Services</h2>
-                </div>
-            </div>
-            <div class="row text-xs-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Security</h4>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
     <!-- Team Section -->
     <section id="team" class="bg-light-gray">
@@ -176,7 +147,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-xs-center">
-                    <h2 class="section-heading">Created a website for teenagers, where they can share problems, hobbies, interests and не мога да го изммисля</h2>
+                    <h2 class="section-heading">Created a website for teenagers, where they can share problems, hobbies and interests</h2>
                 </div>
             </div>
         </div>
@@ -345,7 +316,6 @@
     </section>
 
     <section id="forum">
-        <input type="submit" id="zdr">
         <div class="main-for-themes">
             <div id="themes">
                 <div id="themeHeader"><strong>Themes</strong></div>
