--- a/index.html
+++ b/index.html
@@ -367,61 +367,53 @@
                             </div>
                             <div class="span4">
                                 <div>
-                                    <h2>Jonnie Spratley</h2> <a href="#profile">
-                                        <span class="glyphicon glyphicon-pencil"></span></a>
-                                        <div style="display: none">
-                                            <input type="text" name="editso1"   placeholder="Full Name" />
-                                            <button name="edit" >Edit</button>
-                                        </div>
+                                    <h2>Jonnie Spratley</h2>
                                 </div>
                                 <ul class="unstyled">
-                                    <li><i class="icon-phone"></i> 916-241-3613 <a href="#profile">
-                                        <span class="glyphicon glyphicon-pencil"></span></a>
-                                        <div style="display: none">
-                                            <input type="text" name="editso2" placeholder="Phone Number" />
-                                            <button name="edit">Edit</button>
-                                        </div>
+                                    <li><i class="icon-phone"></i> 916-241-3613
                                     </li>
-                                    <li><i class="icon-envelope"></i> jonniespratley@me.com <a href="#profile">
-                                        <span class="glyphicon glyphicon-pencil"></span></a>
-                                        <div style="display: none">
-                                            <input type="text" name="editso3" placeholder="E-mail" />
-                                            <button name="edit">Edit</button>
-                                        </div>
+                                    <li><i class="icon-envelope"></i> jonniespratley@me.com
                                     </li>
                                     <li><i class="icon-globe"></i> http://jonniespratley.me
-                                        <a href="#profile">
-                                        <span class="glyphicon glyphicon-pencil"></span>
-                                        </a>
-                                        <div style="display: none">
-                                                <input type="text" name="editso4" placeholder="Facebook" />
-                                                <button name="edit">Edit</button>
-                                            </div>
+
                                     </li>
 
                                 </ul>
                             </div>
-                                <ul class="inline stats">
-                                    <li>
-                                        <span id="questions">0</span>
-                                        <h5>Questions</h5>
-                                    </li>
-                                    <li>
-                                        <span id="comments">0</span>
-                                        <h5>Comments</h5>
-                                    </li>
+                            <ul class="inline stats">
+                                <li>
+                                    <span id="questions">0</span>
+                                    <h5>Questions</h5>
+                                </li>
+                                <li>
+                                    <span id="comments">0</span>
+                                    <h5>Comments</h5>
+                                </li>
 
-                                </ul>
-                                <div><!--/span6-->
-                                </div><!--/row-->
-                            </div>
-                            <!--Body content-->
+                            </ul>
+                            <div><!--/span6-->
+                            </div><!--/row-->
                         </div>
-                    </div>
 
                     </div>
                 </div>
+                <div class="well clearfix">
+                    <div style="text-align: center">
+                        <h1>Edit profile</h1>
+                        <select style="text-align: center">
+                            <option value="full_name">Full Name</option>
+                            <option value="phone_number">Phone Number</option>
+                            <option value="e_mail">E-mail</option>
+                            <option value="facebook_link">Facebook</option>
+                        </select>
+                        <div>
+                            <input type="text" id="changes">
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+        </div>
         </div>
     </section>
     <footer>
