first commit since git is bugged

--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
             <fieldset>
                 <h2 class="fs-title">Create Your Account</h2>
                 <h3 class="fs-subtitle">STEP #1</h3>
-                <input type="text" name="username" placeholder="Username" />
-                <input type="password" name="password" placeholder="Password" />
+                <input type="text" name="username" placeholder="Username" class="registerUsername"/>
+                <input type="password" name="password" placeholder="Password" class="registerPassword"/>
                 <input type="password" name="cpassword" placeholder="Confirm Password" />
                 <input type="button" name="next" class="next action-button" value="Next" />
             </fieldset>
