--- a/index.html
+++ b/index.html
@@ -274,10 +274,9 @@
             <div class="row">
                 <div class="col-lg-12">
 
-                            <!--<div class="timeline-image">-->
-                                <!--<img src="img/login-background.jpg" height="624"-->
-                                                                  <!--width="500"/>-->
-                            <!--</div>-->
+                            <!--<div class="timeline-image">
+                                <img src="img/login-background.jpg" height="624" width="500"/>
+                            </div>-->
                 </div>
             </div>
         </div>
@@ -325,6 +324,10 @@
                 <div id="questionsHeader"><strong>Latest questions</strong></div>
             </div>
         </div>
+    </section>
+
+    <section id="questionsAndComments">
+        <div id="questionsAndCommentsHeader""></div>
     </section>
 
     <section id="profile">
@@ -599,6 +602,7 @@
     <!-- jQuery -->
     <script src="js/registration.js"></script>
     <script src="js/themes.js"></script>
+    <script src="js/questionsAndComments.js"></script>
     <!-- Tether -->
     <script src="vendor/tether/tether.min.js"></script>
 
