edited all bars

--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
                         <a class="nav-link page-scroll" id="profile-bar" href="#profile">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" id="logout-bar" href="#page-top">Logout</a>
+                        <a class="logout-nav-link page-scroll" id="logout-bar" href="#page-top">Logout</a>
                     </li>
-
                 </ul>
             </div>
         </div>
