--- a/index.html
+++ b/index.html
@@ -327,7 +327,8 @@
     </section>
 
     <section id="questionsAndComments">
-        <div id="questionsAndCommentsHeader""></div>
+        <div id="questionsAndCommentsHeader"></div>
+        <div id="questionsAndCommentsHeaderBody" >
     </section>
 
     <section id="profile">
