edit profile is added

--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
             <div class="collapse navbar-toggleable-sm" id="navbarResponsive">
                 <ul id="all-bars" class="nav navbar-nav float-md-right">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" id="themes-bar" href="#forum">Themes</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link page-scroll" id="about-bar" href="#team">About</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" id="themes-bar" href="#forum">Themes</a>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link page-scroll" id="login-bar" href="#about">Login</a>
                     </li>
@@ -367,7 +368,7 @@
                 <div class="well clearfix">
                     <div style="text-align: center">
                         <h1>Edit profile</h1>
-                        <select style="text-align: center">
+                        <select id="section" style="text-align: center">
                             <option value="full_name">Full Name</option>
                             <option value="phone_number">Phone Number</option>
                             <option value="e_mail">E-mail</option>
